# hw_20

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mysite/: Dockerfile  docker-compose.yml  pyproject.toml  settings.py  sitemaps.py  urls.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: forms.py
mysite/shopapp/templates/shopapp/: base.html  groups-list.html  order_detail.html  order_list.html  product_confirm_delete.html  product_form.html  products-details.html  products-list.html  shop-index.html
shopapp/: forms.py  views.py
shopapp/templates/shopapp/: base.html  groups-list.html  order_detail.html  order_list.html  product_confirm_delete.html  product_form.html  product_update_form.html  products-details.html  products-list.html  products_changelist.html  shop-index.html
