[tool.poetry]
name = "django-shop-project"
version = "0.1.0"
description = "Django интернет-магазин"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.0"
django-debug-toolbar = "^4.0.0"
Pillow = "^10.0.0"
psycopg2-binary = "^2.9.0"
gunicorn = "^21.0.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-django = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backack = "poetry.core.masonry.api"